--- a/src/ForkFinder/Views/Clientes/Register.cshtml
+++ b/src/ForkFinder/Views/Clientes/Register.cshtml
@@ -7,7 +7,6 @@
 
 <div class="justify-content-center">
     <div class="row justify-content-center">
-
         <div class="col-md-auto card py-3" style="width: 26rem;">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -23,68 +22,77 @@
                         Restaurante
                     </button>
                 </li>
-
             </ul>
-
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="cliente-tab-pane" role="tabpanel" aria-labelledby="cliente-tab" tabindex="0">
-
-                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <form asp-action="Register">
                         <h4>Criar conta Cliente.</h4>
                         <hr />
-                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.Email"></label>
-                            <input asp-for="Input.Email" class="form-control" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            <label asp-for="Nome"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
                         </div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                            <label asp-for="CPF"></label>
+                            <input asp-for="CPF" class="form-control" />
+                            <span asp-validation-for="CPF" class="text-danger"></span>
                         </div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.ConfirmPassword"></label>
-                            <input asp-for="Input.ConfirmPassword" class="form-control" />
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                            <label asp-for="Email"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
+                        <div class="form-group py-2">
+                            <label asp-for="Senha"></label>
+                            <input asp-for="Senha" class="form-control" />
+                            <span asp-validation-for="Senha" class="text-danger"></span>
+                        </div>
+                        @*<div class="form-group py-2">
+                            <label asp-for="ConfirmSenha"></label>
+                        <input asp-for="ConfirmSenha" class="form-control" />
+                        <span asp-validation-for="ConfirmSenha" class="text-danger"></span>
+                        </div>*@
                         <div class="form-group text-end py-2">
                             <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
                         </div>
                     </form>
                 </div>
-
-
-                <div class="tab-pane fade" id="restaurante-tab-pane" role="tabpanel" aria-labelledby="restaurante-tab" tabindex="0">
-
-                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                        <h4>Criar uma conta Restaurate.</h4>
+               @* <div class="tab-pane fade" id="restaurante-tab-pane" role="tabpanel" aria-labelledby="restaurante-tab" tabindex="0">
+                    <form asp-route-returnUrl="@Model" method="post">
+                        <h4>Criar conta Cliente.</h4>
                         <hr />
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.Email"></label>
-                            <input asp-for="Input.Email" class="form-control" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            <label asp-for="Nome"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
                         </div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                            <label asp-for="CPF"></label>
+                            <input asp-for="CPF" class="form-control" />
+                            <span asp-validation-for="CPF" class="text-danger"></span>
                         </div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                            <label asp-for="Email"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <div class="form-group py-2">
-                            <label asp-for="Input.ConfirmPassword"></label>
-                            <input asp-for="Input.ConfirmPassword" class="form-control" />
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                            <label asp-for="Senha"></label>
+                            <input asp-for="Senha" class="form-control" />
+                            <span asp-validation-for="Senha" class="text-danger"></span>
+                        </div>
+                        @*<div class="form-group py-2">
+                        <label asp-for="ConfirmSenha"></label>
+                        <input asp-for="ConfirmSenha" class="form-control" />
+                        <span asp-validation-for="ConfirmSenha" class="text-danger"></span>
                         </div>
                         <div class="form-group text-end py-2">
                             <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
                         </div>
-                    </form>
+                    </form>*@
                 </div>
             </div>
         </div>
