--- a/src/ForkFinder/Views/Shared/_Layout.cshtml
+++ b/src/ForkFinder/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                         </li>
                        @* }*@
                     </ul>
-                   @* <partial name="_LoginPartial" />*@
+                   <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
