--- a/src/ForkFinder/Views/Clientes/Index.cshtml
+++ b/src/ForkFinder/Views/Clientes/Index.cshtml
@@ -13,6 +13,7 @@
                 <th>@Html.DisplayNameFor(model => model.Especialidades_Clientes)</th>
             </tr>
         </thead>
+            
         <tbody>
             @foreach(var item in Model)
             {
@@ -29,8 +30,9 @@
                 <td class="align-middle">
                     @Html.DisplayFor(modelItem => item.Especialidades_Clientes)
                 </td>
+                        
                     <td class="align-middle">
-                           <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a> |
+                            <a class="btn btn-outline-primary" asp-controller="Clientes" asp-action="Reserved" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a> |
                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i></a> |
                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i></a>
                     </td>
